infra/nginx/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-nginx-prefix
  namespace: nginx
spec:
  stripPrefix:
    prefixes:
      - /nginx
