infra/nginx/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`localhost`)
      kind: Rule
      services:
        - name: nginx.nginx
          port: 80
  tls: {}
